# batman

./: .gitignore  README.md  components.json  cspell.json  eslint.config.js  package.json  pnpm-lock.yaml  postcss.config.mjs  react-router.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: index.d.ts  main.tsx  root.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: menu.rs  mod.rs  utils.rs  window.rs
src-tauri/src/command/: gitlab.rs
src-tauri/src/commands/: gitlab.rs
src/atoms/: gitlab.ts  index.ts  page-title.ts  setting.ts  ui-config.ts
src/components/: theme-toggle.tsx
src/components/app-context/: index.tsx
src/components/app-provider/: app-context.tsx  index.tsx  layout.tsx  nav.tsx  query-provider.tsx  theme-provider.tsx  theme-toggle.tsx
src/components/app-provider/events/: shortcut-events.ts
src/components/code/: index.tsx
src/components/icons/: gitlab.tsx
src/components/layout/: index.tsx
src/components/magicui/: dot-pattern.tsx  index.ts
src/components/tauri/: store.ts
src/components/theme/: theme-toggle.tsx
src/components/ui/: button.tsx  calendar.tsx  dot-pattern.tsx  form.tsx  index.ts  input.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sidebar.tsx  tabs.tsx  toast.tsx  tooltip.tsx  use-toast.ts
src/hooks/: index.ts
src/lib/: api.ts
src/pages/: 404.tsx  _app.tsx  app.tsx  index.tsx
src/pages/gitlab/: _layout.tsx  _services.ts  index.tsx
src/pages/preferences/: index.tsx
src/pages/search/: index.tsx
src/pages/settings/: index.tsx
src/routes/: _index.tsx  settings.tsx
src/routes/gitlab/: route.tsx
src/routes/gitlab/_components/: list-skeleton.tsx  services.ts
src/styles/: global.css
src/utils/: api.ts  index.ts
