[package]
name = "batman"
version = "0.0.0"
description = "A Tauri App for Batman"
authors = ["nnecec"]
edition = "2021"

[profile.release]
panic = 'abort'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "batman_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.7", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.11", features = [
  "macos-private-api",
  "unstable",
] }
tauri-plugin-shell = "2.0.0-rc.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.0.0-rc.3"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
